--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "BSD-3-Clause",
     "require": {
         "illuminate/console": "*" ,
-        "illuminate/filesystem" : "*",
+        "illuminate/filesystem" : "~5.4",
         "pimple/pimple": "~3.0"
     },
     "require-dev": {
